fix: Update hero content position on mobile

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
       <img src="hero_img_01.jpg" alt="A photograph of the Activision brand on the front of a building.">
     </picture>
     <div class="hero-container">
-      <p class="hero-content">The world's first independent developer and distributor of <br>
-        video console games &amp; one
-        of
-        the largest third party<br>
-        video game publishers in the world.</p>
+      <p class="hero-content">The world's first independent developer and distributor of video console games &amp; one
+        of the largest third party video game publishers in the world.</p>
       <button id="btn" class="btn"><b>LEARN MORE</b></button>
     </div>
     <div id="modal" class="modal">
