style: Match button font to mockup

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hero-container">
       <p class="hero-content">The world's first independent developer and distributor of video console games &amp; one
         of the largest third party video game publishers in the world.</p>
-      <button id="btn" class="btn"><b>LEARN MORE</b></button>
+      <button id="btn" class="btn">LEARN MORE</button>
     </div>
     <div id="modal" class="modal">
       <div class="modal-content">
