fix: Correctly close modal when close span is clicked

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button id="btn" class="btn">LEARN MORE</button>
     </div>
     <div id="modal" class="modal">
-      <span class="close">&times;</span>
+      <span id="close" class="close">&times;</span>
       <div class="modal-content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xvjn6BopsV8" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
